docs/_archive/W259-grand-catalog-archive/prior-wave-grand-synthesis-2026-05-16/91-superseded-masters/kit-trees-pre-v62/v59/SOTA_REPOS_BEST_OF_BEST_FINAL_LIST.md
# SOTA_REPOS_BEST_OF_BEST_FINAL_LIST.md

## Selection rule
Keep only if the repo improves context control, semantic retrieval, read-path compression, worktree isolation, workflow state, independent review, deterministic gates, benchmark feedback, memory discipline, MCP governance, or source auditability.

## FOUNDATION_OFFICIAL
```text
anthropics/claude-code
openai/codex
openai/codex-plugin-cc
anthropics/skills
openai/skills
agentskills/agentskills
modelcontextprotocol/modelcontextprotocol
modelcontextprotocol/servers
modelcontextprotocol/inspector
github/github-mcp-server
microsoft/playwright-mcp
upstash/context7
anthropics/claude-code-action
anthropics/claude-code-base-action
anthropics/claude-code-security-review
anthropics/claude-agent-sdk-python
anthropics/claude-agent-sdk-typescript
anthropics/anthropic-sdk-python
anthropics/anthropic-sdk-typescript
openai/openai-agents-python
openai/openai-python
openai/openai-node
github/codeql-action
github/spec-kit
```

## DEFAULT_INSTALL_CORE
```text
ryoppippi/ccusage
rtk-ai/rtk
oraios/serena
yamadashy/repomix
BurntSushi/ripgrep
sharkdp/fd
jqlang/jq
mikefarah/yq
cli/cli
pre-commit/pre-commit
casey/just
jdx/mise
astral-sh/uv
```

## MEASUREMENT_VISIBILITY
```text
ryoppippi/ccusage
matt1398/claude-devtools
sirmalloc/ccstatusline
jarrodwatts/claude-hud
mcpware/cross-code-organizer
jeongwookie/WhereMyTokens
spences10/claude-code-analytics
phuryn/claude-usage
```

## TOKEN_CONTEXT_ELITE
```text
rtk-ai/rtk
mksglu/context-mode
chopratejas/headroom
buildoak/wet
jordan112/skinny-jeans
ArthurDEV44/distill
z19r/whetstone
alexgreensh/token-optimizer
juyterman1000/entroly
zilliztech/claude-context
aider-ai/aider
mixedbread-ai/mgrep
ast-grep/ast-grep
tree-sitter/tree-sitter
tirth8205/code-review-graph
safishamsi/graphify
mufeedvh/code2prompt
mcpware/cross-code-organizer
upstash/context7
microsoft/playwright-mcp
yvgude/lean-ctx
flightlesstux/prompt-caching
oxygen-fragment/claude-modular
```

## CODEBASE_INTELLIGENCE
```text
oraios/serena
yamadashy/repomix
zilliztech/claude-context
aider-ai/aider
mixedbread-ai/mgrep
ast-grep/ast-grep
tree-sitter/tree-sitter
tirth8205/code-review-graph
safishamsi/graphify
mufeedvh/code2prompt
sourcegraph/cody
yoanbernabeu/grepai
aidenybai/react-grab
```

## HIGH_STAR_WORKFLOW_REFERENCE_SELECTIVE
```text
obra/superpowers
affaan-m/everything-claude-code
github/spec-kit
garrytan/gstack
gsd-build/get-shit-done
mattpocock/skills
bmad-code-org/BMAD-METHOD
Fission-AI/OpenSpec
Yeachan-Heo/oh-my-claudecode
addyosmani/agent-skills
EveryInc/compound-engineering-plugin
humanlayer/humanlayer
shanraisshan/claude-code-best-practice
shareAI-lab/learn-claude-code
VILA-Lab/Dive-into-Claude-Code
Piebald-AI/claude-code-system-prompts
Piebald-AI/tweakcc
```

## WORKFLOW_HARNESS_ELITE
```text
bmad-code-org/BMAD-METHOD
eyaltoledano/claude-task-master
automazeio/ccpm
coleam00/context-engineering-intro
Wirasm/PRPs-agentic-eng
github/spec-kit
gsd-build/get-shit-done
maxritter/pilot-shell
wshobson/agents
shanraisshan/claude-code-best-practice
affaan-m/everything-claude-code
opensesh/KARIMO
agent-sh/agentsys
SethGammon/Citadel
sipyourdrink-ltd/bernstein
nutthouse/tutti
humanlayer/advanced-context-engineering-for-coding-agents
humanlayer/humanlayer
rohitg00/pro-workflow
shareAI-lab/learn-claude-code
HKUDS/OpenHarness
SuperClaude-Org/SuperClaude_Framework
shinpr/claude-code-workflows
mattgierhart/PRD-driven-context-engineering
muratcankoylan/agent-skills-for-context-engineering
```

## PARALLEL_OPERATOR_ELITE
```text
smtg-ai/claude-squad
ComposioHQ/agent-orchestrator
yxwucq/CCUI
jamesrochabrun/AgentHub
BloopAI/vibe-kanban
stravu/crystal
manaflow-ai/cmux
fynnfluegge/agtx
raine/workmux
superset-sh/superset
agent-next/cc-manager
farion1231/cc-switch
DanWahlin/ai-agent-board
nwiizo/ccswarm
preset-io/agor
vnovick/itervox
Sterll/claude-terminal
gastownhall/gastown
mattpocock/sandcastle
spillwavesolutions/parallel-worktrees
```

## CODEX_AND_MULTI_MODEL_BRIDGES
```text
openai/codex-plugin-cc
bfly123/claude_codex_bridge
xiaolai/codex-toolkit-for-claude
promptadvisers/claudex
sakibsadmanshajib/gemini-plugin-cc
nikuscs/codex-cc-plugin
tasict/opencode-plugin-cc
sendbird/cc-plugin-codex
thepushkarp/cc-codex-plugin
```

## EVAL_BENCHMARK_OBSERVABILITY
```text
swe-bench/SWE-bench
swe-agent/swe-agent
SWE-agent/mini-swe-agent
OpenHands/OpenHands
OpenHands/software-agent-sdk
OpenHands/benchmarks
aaif-goose/goose
evo-hq/evo
NousResearch/hermes-agent
openai/evals
promptfoo/promptfoo
confident-ai/deepeval
braintrustdata/braintrust-sdk
langfuse/langfuse
explodinggradients/ragas
Human-Agent-Society/CORAL
princeton-pli/hal-harness
```

## MEMORY_MCP_AUDIT_REQUIRED
```text
thedotmack/claude-mem
mkreyman/mcp-memory-keeper
doobidoo/mcp-memory-service
supermemoryai/claude-supermemory
supermemoryai/supermemory-mcp
itsjwill/claude-memory
GMaN1911/claude-cognitive
lucasrosati/claude-code-memory-setup
chopratejas/headroom
mcpware/cross-code-organizer
mcpware/mcp-memory-service
```

## MCP_SECURITY_GOVERNANCE
```text
snyk/agent-scan
cisco-ai-defense/mcp-scanner
cisco-ai-defense/skill-scanner
InvariantLabs-ai/mcp-scan
MCP-Defender/MCP-Defender
mintmcp/agent-security
slowmist/MCP-Security-Checklist
edimuj/vexscan-claude-code
edimuj/vexscan
affaan-m/agentshield
trailofbits/claude-code-config
trailofbits/claude-code-devcontainer
StacklokLabs/stacklok-claude-hooks
dwarvesf/claude-guardrails
luckyPipewrench/pipelock
ressl/mcp-firewall
```

## AGENT_FRAMEWORK_REFERENCES
```text
langchain-ai/langgraph
langchain-ai/deepagents
microsoft/agent-framework
microsoft/autogen
google/adk-python
google/adk-js
google/adk-web
pydantic/pydantic-ai
crewAIInc/crewAI
agno-agi/agno
huggingface/smolagents
openai/openai-agents-python
```

## CLI_CODE_PROSE_QUALITY
```text
semgrep/semgrep
github/codeql-action
gitleaks/gitleaks
trufflesecurity/trufflehog
aquasecurity/trivy
google/osv-scanner
ossf/scorecard
step-security/harden-runner
pre-commit/pre-commit
casey/just
jdx/mise
astral-sh/uv
astral-sh/ruff
biomejs/biome
oxc-project/oxc
koalaman/shellcheck
rhysd/actionlint
hadolint/hadolint
crate-ci/typos
terraform-linters/tflint
golangci/golangci-lint
bridgecrewio/checkov
evilmartians/lefthook
woodruffw/zizmor
oxsecurity/megalinter
errata-ai/vale
DavidAnson/markdownlint
markdownlint/markdownlint
textlint/textlint
```

## DISCOVERY_ONLY
```text
hesreallyhim/awesome-claude-code
onmyway133/awesome-claude-code
subinium/awesome-claude-code
bradAGI/awesome-cli-coding-agents
sorrycc/awesome-code-agents
RoggeOhta/awesome-codex-cli
VoltAgent/awesome-agent-skills
ComposioHQ/awesome-claude-skills
andyrewlee/awesome-agent-orchestrators
Agent-Analytics/awesome-multi-agent-orchestrators
Picrew/awesome-agent-harness
quemsah/awesome-claude-plugins
jqueryscript/awesome-claude-code
efij/awesome-claude-code-security
ai-for-developers/awesome-ai-coding-tools
EthicalML/awesome-agentic-engineering-resources
jordimas/awesome-agentic-engineering
```
